# codeslayer.filesearch-plugin

./: Makefile.am  Makefile.in  configure  configure.ac  filesearch.codeslayer-plugin.in
.codeslayer/: autotools.conf  ctags.conf
src/: Makefile.am  Makefile.in  filesearch-dialog.c  filesearch-dialog.h  filesearch-engine.c  filesearch-engine.h  filesearch-index.c  filesearch-index.h  filesearch-menu.c  filesearch-menu.h  filesearch-plugin.c
