lib_LTLIBRARIES = libfilesearchplugin.la

libfilesearchplugin_la_SOURCES = \
    filesearch-index.c \
    filesearch-index.h \
    filesearch-menu.c \
    filesearch-menu.h \
    filesearch-engine.c \
    filesearch-engine.h \
    filesearch-plugin.c

libfilesearchplugin_la_CPPFLAGS = $(INDEXERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
