lib_LTLIBRARIES = libfilesearchcodeslayerplugin.la

libfilesearchcodeslayerplugin_la_SOURCES = \
    filesearch-dialog.c \
    filesearch-dialog.h \
    filesearch-index.c \
    filesearch-index.h \
    filesearch-menu.c \
    filesearch-menu.h \
    filesearch-engine.c \
    filesearch-engine.h \
    filesearch-plugin.c

libfilesearchcodeslayerplugin_la_CPPFLAGS = $(FILESEARCHCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
